fix log floating in middle of screen on ios safari

--- a/_sass/_mailchimp.scss
+++ b/_sass/_mailchimp.scss
@@ -39,14 +39,7 @@
   margin-top: 25px;
 }
 
-@media screen and (max-width: 720px) {
-  .mc_input {
-    padding-top: 19px;
-    padding-bottom: 14px;
-  }
-}
-
-@media screen and (max-device-width: 720px) {
+@media all and (max-device-width: 720px) {
   .mc_input {
     padding-top: 19px;
     padding-bottom: 14px;
